--- a/DWPTienda/src/main/webapp/WEB-INF/web.xml
+++ b/DWPTienda/src/main/webapp/WEB-INF/web.xml
@@ -2,12 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="5.0">
   <display-name>DWPSDTienda</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-    <welcome-file>default.htm</welcome-file>
+    <welcome-file>vistas/inventario.jsp</welcome-file>
   </welcome-file-list>
   <resource-ref>
     <description>Conexion</description>
@@ -24,5 +19,15 @@
   <servlet-mapping>
     <servlet-name>testDaoServelet</servlet-name>
     <url-pattern>/testDaoServelet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProductoServelet</display-name>
+    <servlet-name>ProductoServelet</servlet-name>
+    <servlet-class>com.app.servelet.ProductoServelet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProductoServelet</servlet-name>
+    <url-pattern>/ProductoServelet</url-pattern>
   </servlet-mapping>
 </web-app>
