--- a/DWPTienda/src/main/webapp/WEB-INF/web.xml
+++ b/DWPTienda/src/main/webapp/WEB-INF/web.xml
@@ -30,4 +30,14 @@
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/LoginServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ProveedorServlet</display-name>
+    <servlet-name>ProveedorServlet</servlet-name>
+    <servlet-class>com.app.servlet.ProveedorServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProveedorServlet</servlet-name>
+    <url-pattern>/ProveedorServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
